cgram.output
Terminals unused in grammar

    BAD_TOKEN
    THEN


State 367 conflicts: 1 shift/reduce


Grammar

    0 $accept: file $end

    1 identifier: IDENTIFIER
    2           | ENUMERATION_CONSTANT

    3 file: translation_unit

    4 translation_unit: external_declaration
    5                 | translation_unit external_declaration

    6 external_declaration: function_definition
    7                     | declaration
    8                     | untyped_declaration

    9 function_definition: function_declarator compound_statement
   10                    | function_declarator declaration_list compound_statement
   11                    | declaration_specifiers function_declarator compound_statement
   12                    | declaration_specifiers function_declarator declaration_list compound_statement

   13 declaration: declaration_specifiers SM
   14            | declaration_specifiers init_declarator_list SM

   15 untyped_declaration: init_declarator_list SM

   16 declaration_list: declaration
   17                 | declaration_list declaration

   18 declaration_specifiers: storage_class_specifier
   19                       | storage_class_specifier declaration_specifiers
   20                       | type_specifier
   21                       | type_specifier declaration_specifiers
   22                       | type_qualifier
   23                       | type_qualifier declaration_specifiers

   24 storage_class_specifier: TYPEDEF
   25                        | EXTERN
   26                        | STATIC
   27                        | AUTO
   28                        | REGISTER

   29 type_specifier: actual_type_specifier
   30               | type_adjective

   31 actual_type_specifier: VOID
   32                      | CHAR
   33                      | INT
   34                      | FLOAT
   35                      | DOUBLE
   36                      | TYPEDEF_NAME
   37                      | struct_or_union_specifier
   38                      | enum_specifier

   39 type_adjective: SHORT
   40               | LONG
   41               | SIGNED
   42               | UNSIGNED

   43 type_qualifier: CONST
   44               | VOLATILE

   45 struct_or_union_specifier: struct_or_union LC struct_declaration_list RC
   46                          | struct_or_union identifier LC struct_declaration_list RC
   47                          | struct_or_union identifier

   48 struct_or_union: STRUCT
   49                | UNION

   50 struct_declaration_list: struct_declaration
   51                        | struct_declaration_list struct_declaration

   52 init_declarator_list: init_declarator
   53                     | init_declarator_list CM init_declarator

   54 init_declarator: declarator
   55                | declarator ASN initializer

   56 struct_declaration: specifier_qualifier_list SM
   57                   | specifier_qualifier_list struct_declarator_list SM

   58 specifier_qualifier_list: type_specifier
   59                         | type_specifier specifier_qualifier_list
   60                         | type_qualifier
   61                         | type_qualifier specifier_qualifier_list

   62 struct_declarator_list: struct_declarator
   63                       | struct_declarator_list CM struct_declarator

   64 struct_declarator: declarator
   65                  | COLON constant_expression
   66                  | declarator COLON constant_expression

   67 enum_specifier: ENUM LC enumerator_list RC
   68               | ENUM identifier LC enumerator_list RC
   69               | ENUM identifier

   70 enumerator_list: enumerator
   71                | enumerator_list CM enumerator

   72 enumerator: IDENTIFIER
   73           | IDENTIFIER ASN constant_expression

   74 declarator: direct_declarator
   75           | pointer direct_declarator

   76 direct_declarator: identifier
   77                  | LP declarator RP
   78                  | direct_declarator LB RB
   79                  | direct_declarator LB constant_expression RB
   80                  | direct_declarator LP parameter_type_list RP
   81                  | direct_declarator LP RP
   82                  | direct_declarator LP identifier_list RP

   83 function_declarator: direct_function_declarator
   84                    | pointer direct_function_declarator

   85 direct_function_declarator: direct_declarator LP parameter_type_list RP
   86                           | direct_declarator LP RP
   87                           | direct_declarator LP identifier_list RP

   88 pointer: MUL
   89        | MUL type_qualifier_list
   90        | MUL pointer
   91        | MUL type_qualifier_list pointer

   92 type_qualifier_list: type_qualifier
   93                    | type_qualifier_list type_qualifier

   94 parameter_type_list: parameter_list
   95                    | parameter_list CM ELIPSIS

   96 parameter_list: parameter_declaration
   97               | parameter_list CM parameter_declaration

   98 parameter_declaration: declaration_specifiers declarator
   99                      | declaration_specifiers
  100                      | declaration_specifiers abstract_declarator

  101 identifier_list: IDENTIFIER
  102                | identifier_list CM IDENTIFIER

  103 initializer: assignment_expression
  104            | LC initializer_list RC
  105            | LC initializer_list CM RC

  106 initializer_list: initializer
  107                 | initializer_list CM initializer

  108 type_name: specifier_qualifier_list
  109          | specifier_qualifier_list abstract_declarator

  110 abstract_declarator: pointer
  111                    | direct_abstract_declarator
  112                    | pointer direct_abstract_declarator

  113 direct_abstract_declarator: LP abstract_declarator RP
  114                           | LB RB
  115                           | LB constant_expression RB
  116                           | direct_abstract_declarator LB RB
  117                           | direct_abstract_declarator LB constant_expression RB
  118                           | LP RP
  119                           | LP parameter_type_list RP
  120                           | direct_abstract_declarator LP RP
  121                           | direct_abstract_declarator LP parameter_type_list RP

  122 statement: labeled_statement
  123          | compound_statement
  124          | expression_statement
  125          | selection_statement
  126          | iteration_statement
  127          | jump_statement

  128 labeled_statement: identifier COLON statement
  129                  | CASE constant_expression COLON statement
  130                  | DEFAULT COLON statement

  131 expression_statement: SM
  132                     | expression SM

  133 compound_statement: LC RC
  134                   | LC compound_statement_opt RC

  135 compound_statement_opt: statement_list
  136                       | declaration_list
  137                       | declaration_list statement_list

  138 statement_list: statement
  139               | statement_list statement

  140 selection_statement: IF LP expression RP statement
  141                    | IF LP expression RP statement ELSE statement
  142                    | SWITCH LP expression RP statement

  143 iteration_statement: WHILE LP expression RP statement
  144                    | DO statement WHILE LP expression RP SM
  145                    | FOR LP forcntrl RP statement

  146 forcntrl: SM SM
  147         | SM SM expression
  148         | SM expression SM
  149         | SM expression SM expression
  150         | expression SM SM
  151         | expression SM SM expression
  152         | expression SM expression SM
  153         | expression SM expression SM expression

  154 jump_statement: GOTO identifier SM
  155               | CONTINUE SM
  156               | BREAK SM
  157               | RETURN SM
  158               | RETURN expression SM

  159 expression: assignment_expression
  160           | expression CM assignment_expression

  161 assignment_expression: conditional_expression
  162                      | unary_expression assignment_operator assignment_expression

  163 assignment_operator: ASN
  164                    | MUASN
  165                    | DIASN
  166                    | MOASN
  167                    | PLASN
  168                    | MIASN
  169                    | SLASN
  170                    | SRASN
  171                    | ANASN
  172                    | ERASN
  173                    | ORASN

  174 conditional_expression: logical_or_expression
  175                       | logical_or_expression QUEST expression COLON conditional_expression

  176 constant_expression: conditional_expression

  177 logical_or_expression: logical_and_expression
  178                      | logical_or_expression OROR logical_and_expression

  179 logical_and_expression: inclusive_or_expression
  180                       | logical_and_expression ANDAND inclusive_or_expression

  181 inclusive_or_expression: exclusive_or_expression
  182                        | inclusive_or_expression OR exclusive_or_expression

  183 exclusive_or_expression: and_expression
  184                        | exclusive_or_expression ER and_expression

  185 and_expression: equality_expression
  186               | and_expression AND equality_expression

  187 equality_expression: relational_expression
  188                    | equality_expression EQ relational_expression
  189                    | equality_expression NE relational_expression

  190 relational_expression: shift_expression
  191                      | relational_expression LT shift_expression
  192                      | relational_expression GT shift_expression
  193                      | relational_expression LE shift_expression
  194                      | relational_expression GE shift_expression

  195 shift_expression: additive_expression
  196                 | shift_expression SHL additive_expression
  197                 | shift_expression SHR additive_expression

  198 additive_expression: multiplicative_expression
  199                    | additive_expression PLUS multiplicative_expression
  200                    | additive_expression MINUS multiplicative_expression

  201 multiplicative_expression: cast_expression
  202                          | multiplicative_expression MUL cast_expression
  203                          | multiplicative_expression DIV cast_expression
  204                          | multiplicative_expression MOD cast_expression

  205 cast_expression: unary_expression
  206                | LP type_name RP cast_expression

  207 unary_expression: postfix_expression
  208                 | INCOP unary_expression
  209                 | DECOP unary_expression
  210                 | unary_operator cast_expression
  211                 | SIZEOF unary_expression
  212                 | SIZEOF LP type_name RP

  213 unary_operator: AND
  214               | MUL
  215               | PLUS
  216               | MINUS
  217               | NOT
  218               | BANG

  219 postfix_expression: primary_expression
  220                   | postfix_expression LB expression RB
  221                   | postfix_expression LP RP
  222                   | postfix_expression LP argument_expression_list RP
  223                   | postfix_expression DOT identifier
  224                   | postfix_expression FOLLOW identifier
  225                   | postfix_expression INCOP
  226                   | postfix_expression DECOP

  227 primary_expression: IDENTIFIER
  228                   | constant
  229                   | STRING
  230                   | LP expression RP

  231 argument_expression_list: assignment_expression
  232                         | argument_expression_list CM assignment_expression

  233 constant: ICON
  234         | CCON
  235         | FCON
  236         | ENUMERATION_CONSTANT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BAD_TOKEN <treeptr> (258)
    ICON <treeptr> (259) 233
    CCON <treeptr> (260) 234
    FCON <treeptr> (261) 235
    ENUMERATION_CONSTANT <treeptr> (262) 2 236
    IDENTIFIER <treeptr> (263) 1 72 73 101 102 227
    STRING <treeptr> (264) 229
    SIZEOF <treeptr> (265) 211 212
    INCOP <treeptr> (266) 208 225
    DECOP <treeptr> (267) 209 226
    SHL <treeptr> (268) 196
    SHR <treeptr> (269) 197
    LE <treeptr> (270) 193
    GE <treeptr> (271) 194
    EQ <treeptr> (272) 188
    NE <treeptr> (273) 189
    ANDAND <treeptr> (274) 180
    OROR <treeptr> (275) 178
    MUASN <treeptr> (276) 164
    DIASN <treeptr> (277) 165
    MOASN <treeptr> (278) 166
    PLASN <treeptr> (279) 167
    ASN <treeptr> (280) 55 73 163
    MIASN <treeptr> (281) 168
    SLASN <treeptr> (282) 169
    SRASN <treeptr> (283) 170
    ANASN <treeptr> (284) 171
    ERASN <treeptr> (285) 172
    ORASN <treeptr> (286) 173
    TYPEDEF_NAME <treeptr> (287) 36
    CM <treeptr> (288) 53 63 71 95 97 102 105 107 160 232
    SM <treeptr> (289) 13 14 15 56 57 131 132 144 146 147 148 149 150 151 152 153 154 155 156 157 158
    LT <treeptr> (290) 191
    GT <treeptr> (291) 192
    PLUS <treeptr> (292) 199 215
    MINUS <treeptr> (293) 200 216
    MUL <treeptr> (294) 88 89 90 91 202 214
    DIV <treeptr> (295) 203
    MOD <treeptr> (296) 204
    LP <treeptr> (297) 77 80 81 82 85 86 87 113 118 119 120 121 140 141 142 143 144 145 206 212 221 222 230
    RP <treeptr> (298) 77 80 81 82 85 86 87 113 118 119 120 121 140 141 142 143 144 145 206 212 221 222 230
    LB <treeptr> (299) 78 79 114 115 116 117 220
    RB <treeptr> (300) 78 79 114 115 116 117 220
    LC <treeptr> (301) 45 46 67 68 104 105 133 134
    RC <treeptr> (302) 45 46 67 68 104 105 133 134
    COLON <treeptr> (303) 65 66 128 129 130 175
    QUEST <treeptr> (304) 175
    AND <treeptr> (305) 186 213
    OR <treeptr> (306) 182
    ER <treeptr> (307) 184
    NOT <treeptr> (308) 217
    FOLLOW <treeptr> (309) 224
    BANG <treeptr> (310) 218
    DOT <treeptr> (311) 223
    TYPEDEF <treeptr> (312) 24
    EXTERN <treeptr> (313) 25
    STATIC <treeptr> (314) 26
    AUTO <treeptr> (315) 27
    REGISTER <treeptr> (316) 28
    CHAR <treeptr> (317) 32
    SHORT <treeptr> (318) 39
    INT <treeptr> (319) 33
    LONG <treeptr> (320) 40
    SIGNED <treeptr> (321) 41
    UNSIGNED <treeptr> (322) 42
    FLOAT <treeptr> (323) 34
    DOUBLE <treeptr> (324) 35
    CONST <treeptr> (325) 43
    VOLATILE <treeptr> (326) 44
    VOID <treeptr> (327) 31
    STRUCT <treeptr> (328) 48
    UNION <treeptr> (329) 49
    ENUM <treeptr> (330) 67 68 69
    ELIPSIS <treeptr> (331) 95
    CASE <treeptr> (332) 129
    DEFAULT <treeptr> (333) 130
    IF <treeptr> (334) 140 141
    SWITCH <treeptr> (335) 142
    WHILE <treeptr> (336) 143 144
    DO <treeptr> (337) 144
    FOR <treeptr> (338) 145
    GOTO <treeptr> (339) 154
    CONTINUE <treeptr> (340) 155
    BREAK <treeptr> (341) 156
    RETURN <treeptr> (342) 157 158
    THEN (343)
    ELSE (344) 141


Nonterminals, with rules where they appear

    $accept (90)
        on left: 0
    identifier <treeptr> (91)
        on left: 1 2
        on right: 46 47 68 69 76 128 154 223 224
    file <treeptr> (92)
        on left: 3
        on right: 0
    translation_unit <treeptr> (93)
        on left: 4 5
        on right: 3 5
    external_declaration <treeptr> (94)
        on left: 6 7 8
        on right: 4 5
    function_definition <treeptr> (95)
        on left: 9 10 11 12
        on right: 6
    declaration <treeptr> (96)
        on left: 13 14
        on right: 7 16 17
    untyped_declaration <treeptr> (97)
        on left: 15
        on right: 8
    declaration_list <treeptr> (98)
        on left: 16 17
        on right: 10 12 17 136 137
    declaration_specifiers <treeptr> (99)
        on left: 18 19 20 21 22 23
        on right: 11 12 13 14 19 21 23 98 99 100
    storage_class_specifier <treeptr> (100)
        on left: 24 25 26 27 28
        on right: 18 19
    type_specifier <treeptr> (101)
        on left: 29 30
        on right: 20 21 58 59
    actual_type_specifier <treeptr> (102)
        on left: 31 32 33 34 35 36 37 38
        on right: 29
    type_adjective <treeptr> (103)
        on left: 39 40 41 42
        on right: 30
    type_qualifier <treeptr> (104)
        on left: 43 44
        on right: 22 23 60 61 92 93
    struct_or_union_specifier <treeptr> (105)
        on left: 45 46 47
        on right: 37
    struct_or_union <treeptr> (106)
        on left: 48 49
        on right: 45 46 47
    struct_declaration_list <treeptr> (107)
        on left: 50 51
        on right: 45 46 51
    init_declarator_list <treeptr> (108)
        on left: 52 53
        on right: 14 15 53
    init_declarator <treeptr> (109)
        on left: 54 55
        on right: 52 53
    struct_declaration <treeptr> (110)
        on left: 56 57
        on right: 50 51
    specifier_qualifier_list <treeptr> (111)
        on left: 58 59 60 61
        on right: 56 57 59 61 108 109
    struct_declarator_list <treeptr> (112)
        on left: 62 63
        on right: 57 63
    struct_declarator <treeptr> (113)
        on left: 64 65 66
        on right: 62 63
    enum_specifier <treeptr> (114)
        on left: 67 68 69
        on right: 38
    enumerator_list <treeptr> (115)
        on left: 70 71
        on right: 67 68 71
    enumerator <treeptr> (116)
        on left: 72 73
        on right: 70 71
    declarator <treeptr> (117)
        on left: 74 75
        on right: 54 55 64 66 77 98
    direct_declarator <treeptr> (118)
        on left: 76 77 78 79 80 81 82
        on right: 74 75 78 79 80 81 82 85 86 87
    function_declarator <treeptr> (119)
        on left: 83 84
        on right: 9 10 11 12
    direct_function_declarator <treeptr> (120)
        on left: 85 86 87
        on right: 83 84
    pointer <treeptr> (121)
        on left: 88 89 90 91
        on right: 75 84 90 91 110 112
    type_qualifier_list <treeptr> (122)
        on left: 92 93
        on right: 89 91 93
    parameter_type_list <treeptr> (123)
        on left: 94 95
        on right: 80 85 119 121
    parameter_list <treeptr> (124)
        on left: 96 97
        on right: 94 95 97
    parameter_declaration <treeptr> (125)
        on left: 98 99 100
        on right: 96 97
    identifier_list <treeptr> (126)
        on left: 101 102
        on right: 82 87 102
    initializer <treeptr> (127)
        on left: 103 104 105
        on right: 55 106 107
    initializer_list <treeptr> (128)
        on left: 106 107
        on right: 104 105 107
    type_name <treeptr> (129)
        on left: 108 109
        on right: 206 212
    abstract_declarator <treeptr> (130)
        on left: 110 111 112
        on right: 100 109 113
    direct_abstract_declarator <treeptr> (131)
        on left: 113 114 115 116 117 118 119 120 121
        on right: 111 112 116 117 120 121
    statement <treeptr> (132)
        on left: 122 123 124 125 126 127
        on right: 128 129 130 138 139 140 141 142 143 144 145
    labeled_statement <treeptr> (133)
        on left: 128 129 130
        on right: 122
    expression_statement <treeptr> (134)
        on left: 131 132
        on right: 124
    compound_statement <treeptr> (135)
        on left: 133 134
        on right: 9 10 11 12 123
    compound_statement_opt <treeptr> (136)
        on left: 135 136 137
        on right: 134
    statement_list <treeptr> (137)
        on left: 138 139
        on right: 135 137 139
    selection_statement <treeptr> (138)
        on left: 140 141 142
        on right: 125
    iteration_statement <treeptr> (139)
        on left: 143 144 145
        on right: 126
    forcntrl <treeptr> (140)
        on left: 146 147 148 149 150 151 152 153
        on right: 145
    jump_statement <treeptr> (141)
        on left: 154 155 156 157 158
        on right: 127
    expression <treeptr> (142)
        on left: 159 160
        on right: 132 140 141 142 143 144 147 148 149 150 151 152 153 158 160 175 220 230
    assignment_expression <treeptr> (143)
        on left: 161 162
        on right: 103 159 160 162 231 232
    assignment_operator <treeptr> (144)
        on left: 163 164 165 166 167 168 169 170 171 172 173
        on right: 162
    conditional_expression <treeptr> (145)
        on left: 174 175
        on right: 161 175 176
    constant_expression <treeptr> (146)
        on left: 176
        on right: 65 66 73 79 115 117 129
    logical_or_expression <treeptr> (147)
        on left: 177 178
        on right: 174 175 178
    logical_and_expression <treeptr> (148)
        on left: 179 180
        on right: 177 178 180
    inclusive_or_expression <treeptr> (149)
        on left: 181 182
        on right: 179 180 182
    exclusive_or_expression <treeptr> (150)
        on left: 183 184
        on right: 181 182 184
    and_expression <treeptr> (151)
        on left: 185 186
        on right: 183 184 186
    equality_expression <treeptr> (152)
        on left: 187 188 189
        on right: 185 186 188 189
    relational_expression <treeptr> (153)
        on left: 190 191 192 193 194
        on right: 187 188 189 191 192 193 194
    shift_expression <treeptr> (154)
        on left: 195 196 197
        on right: 190 191 192 193 194 196 197
    additive_expression <treeptr> (155)
        on left: 198 199 200
        on right: 195 196 197 199 200
    multiplicative_expression <treeptr> (156)
        on left: 201 202 203 204
        on right: 198 199 200 202 203 204
    cast_expression <treeptr> (157)
        on left: 205 206
        on right: 201 202 203 204 206 210
    unary_expression <treeptr> (158)
        on left: 207 208 209 210 211 212
        on right: 162 205 208 209 211
    unary_operator <treeptr> (159)
        on left: 213 214 215 216 217 218
        on right: 210
    postfix_expression <treeptr> (160)
        on left: 219 220 221 222 223 224 225 226
        on right: 207 220 221 222 223 224 225 226
    primary_expression <treeptr> (161)
        on left: 227 228 229 230
        on right: 219
    argument_expression_list <treeptr> (162)
        on left: 231 232
        on right: 222 232
    constant <treeptr> (163)
        on left: 233 234 235 236
        on right: 228


State 0

    0 $accept: . file $end

    ENUMERATION_CONSTANT  shift, and go to state 1
    IDENTIFIER            shift, and go to state 2
    TYPEDEF_NAME          shift, and go to state 3
    MUL                   shift, and go to state 4
    LP                    shift, and go to state 5
    TYPEDEF               shift, and go to state 6
    EXTERN                shift, and go to state 7
    STATIC                shift, and go to state 8
    AUTO                  shift, and go to state 9
    REGISTER              shift, and go to state 10
    CHAR                  shift, and go to state 11
    SHORT                 shift, and go to state 12
    INT                   shift, and go to state 13
    LONG                  shift, and go to state 14
    SIGNED                shift, and go to state 15
    UNSIGNED              shift, and go to state 16
    FLOAT                 shift, and go to state 17
    DOUBLE                shift, and go to state 18
    CONST                 shift, and go to state 19
    VOLATILE              shift, and go to state 20
    VOID                  shift, and go to state 21
    STRUCT                shift, and go to state 22
    UNION                 shift, and go to state 23
    ENUM                  shift, and go to state 24

    identifier                  go to state 25
    file                        go to state 26
    translation_unit            go to state 27
    external_declaration        go to state 28
    function_definition         go to state 29
    declaration                 go to state 30
    untyped_declaration         go to state 31
    declaration_specifiers      go to state 32
    storage_class_specifier     go to state 33
    type_specifier              go to state 34
    actual_type_specifier       go to state 35
    type_adjective              go to state 36
    type_qualifier              go to state 37
    struct_or_union_specifier   go to state 38
    struct_or_union             go to state 39
    init_declarator_list        go to state 40
    init_declarator             go to state 41
    enum_specifier              go to state 42
    declarator                  go to state 43
    direct_declarator           go to state 44
    function_declarator         go to state 45
    direct_function_declarator  go to state 46
    pointer                     go to state 47


State 1

    2 identifier: ENUMERATION_CONSTANT .

    $default  reduce using rule 2 (identifier)


State 2

    1 identifier: IDENTIFIER .

    $default  reduce using rule 1 (identifier)


State 3

   36 actual_type_specifier: TYPEDEF_NAME .

    $default  reduce using rule 36 (actual_type_specifier)


State 4

   88 pointer: MUL .
   89        | MUL . type_qualifier_list
   90        | MUL . pointer
   91        | MUL . type_qualifier_list pointer

    MUL       shift, and go to state 4
    CONST     shift, and go to state 19
    VOLATILE  shift, and go to state 20

    $default  reduce using rule 88 (pointer)

    type_qualifier       go to state 48
    pointer              go to state 49
    type_qualifier_list  go to state 50


State 5

   77 direct_declarator: LP . declarator RP

    ENUMERATION_CONSTANT  shift, and go to state 1
    IDENTIFIER            shift, and go to state 2
    MUL                   shift, and go to state 4
    LP                    shift, and go to state 5

    identifier         go to state 25
    declarator         go to state 51
    direct_declarator  go to state 52
    pointer            go to state 53


State 6

   24 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 24 (storage_class_specifier)


State 7

   25 storage_class_specifier: EXTERN .

    $default  reduce using rule 25 (storage_class_specifier)


State 8

   26 storage_class_specifier: STATIC .

    $default  reduce using rule 26 (storage_class_specifier)


State 9

   27 storage_class_specifier: AUTO .

    $default  reduce using rule 27 (storage_class_specifier)


State 10

   28 storage_class_specifier: REGISTER .

    $default  reduce using rule 28 (storage_class_specifier)


State 11

   32 actual_type_specifier: CHAR .

    $default  reduce using rule 32 (actual_type_specifier)


State 12

   39 type_adjective: SHORT .

    $default  reduce using rule 39 (type_adjective)


State 13

   33 actual_type_specifier: INT .

    $default  reduce using rule 33 (actual_type_specifier)


State 14

   40 type_adjective: LONG .

    $default  reduce using rule 40 (type_adjective)


State 15

   41 type_adjective: SIGNED .

    $default  reduce using rule 41 (type_adjective)


State 16

   42 type_adjective: UNSIGNED .

    $default  reduce using rule 42 (type_adjective)


State 17

   34 actual_type_specifier: FLOAT .

    $default  reduce using rule 34 (actual_type_specifier)


State 18

   35 actual_type_specifier: DOUBLE .

    $default  reduce using rule 35 (actual_type_specifier)


State 19

   43 type_qualifier: CONST .

    $default  reduce using rule 43 (type_qualifier)


State 20

   44 type_qualifier: VOLATILE .

    $default  reduce using rule 44 (type_qualifier)


State 21

   31 actual_type_specifier: VOID .

    $default  reduce using rule 31 (actual_type_specifier)


State 22

   48 struct_or_union: STRUCT .

    $default  reduce using rule 48 (struct_or_union)


State 23

   49 struct_or_union: UNION .

    $default  reduce using rule 49 (struct_or_union)


State 24

   67 enum_specifier: ENUM . LC enumerator_list RC
   68               | ENUM . identifier LC enumerator_list RC
   69               | ENUM . identifier

    ENUMERATION_CONSTANT  shift, and go to state 1
    IDENTIFIER            shift, and go to state 2
    LC                    shift, and go to state 54

    identifier  go to state 55


State 25

   76 direct_declarator: identifier .

    $default  reduce using rule 76 (direct_declarator)


State 26

    0 $accept: file . $end

    $end  shift, and go to state 56


State 27

    3 file: translation_unit .
    5 translation_unit: translation_unit . external_declaration

    ENUMERATION_CONSTANT  shift, and go to state 1
    IDENTIFIER            shift, and go to state 2
    TYPEDEF_NAME          shift, and go to state 3
    MUL                   shift, and go to state 4
    LP                    shift, and go to state 5
    TYPEDEF               shift, and go to state 6
    EXTERN                shift, and go to state 7
    STATIC                shift, and go to state 8
    AUTO                  shift, and go to state 9
    REGISTER              shift, and go to state 10
    CHAR                  shift, and go to state 11
    SHORT                 shift, and go to state 12
    INT                   shift, and go to state 13
    LONG                  shift, and go to state 14
    SIGNED                shift, and go to state 15
    UNSIGNED              shift, and go to state 16
    FLOAT                 shift, and go to state 17
    DOUBLE                shift, and go to state 18
    CONST                 shift, and go to state 19
    VOLATILE              shift, and go to state 20
    VOID                  shift, and go to state 21
    STRUCT                shift, and go to state 22
    UNION                 shift, and go to state 23
    ENUM                  shift, and go to state 24

    $default  reduce using rule 3 (file)

    identifier                  go to state 25
    external_declaration        go to state 57
    function_definition         go to state 29
    declaration                 go to state 30
    untyped_declaration         go to state 31
    declaration_specifiers      go to state 32
    storage_class_specifier     go to state 33
    type_specifier              go to state 34
    actual_type_specifier       go to state 35
    type_adjective              go to state 36
    type_qualifier              go to state 37
    struct_or_union_specifier   go to state 38
    struct_or_union             go to state 39
    init_declarator_list        go to state 40
    init_declarator             go to state 41
    enum_specifier              go to state 42
    declarator                  go to state 43
    direct_declarator           go to state 44
    function_declarator         go to state 45
    direct_function_declarator  go to state 46
    pointer                     go to state 47


State 28

    4 translation_unit: external_declaration .

    $default  reduce using rule 4 (translation_unit)


State 29

    6 external_declaration: function_definition .

    $default  reduce using rule 6 (external_declaration)


State 30

    7 external_declaration: declaration .

    $default  reduce using rule 7 (external_declaration)


State 31

    8 external_declaration: untyped_declaration .

    $default  reduce using rule 8 (external_declaration)


State 32

   11 function_definition: declaration_specifiers . function_declarator compound_statement
   12                    | declaration_specifiers . function_declarator declaration_list compound_statement
   13 declaration: declaration_specifiers . SM
   14            | declaration_specifiers . init_declarator_list SM

    ENUMERATION_CONSTANT  shift, and go to state 1
    IDENTIFIER            shift, and go to state 2
    SM                    shift, and go to state 58
    MUL                   shift, and go to state 4
    LP                    shift, and go to state 5

    identifier                  go to state 25
    init_declarator_list        go to state 59
    init_declarator             go to state 41
    declarator                  go to state 43
    direct_declarator           go to state 44
    function_declarator         go to state 60
    direct_function_declarator  go to state 46
    pointer                     go to state 47


State 33

   18 declaration_specifiers: storage_class_specifier .
   19                       | storage_class_specifier . declaration_specifiers

    TYPEDEF_NAME  shift, and go to state 3
    TYPEDEF       shift, and go to state 6
    EXTERN        shift, and go to state 7
    STATIC        shift, and go to state 8
    AUTO          shift, and go to state 9
    REGISTER      shift, and go to state 10
    CHAR          shift, and go to state 11
    SHORT         shift, and go to state 12
    INT           shift, and go to state 13
    LONG          shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    FLOAT         shift, and go to state 17
    DOUBLE        shift, and go to state 18
    CONST         shift, and go to state 19
    VOLATILE      shift, and go to state 20
    VOID          shift, and go to state 21
    STRUCT        shift, and go to state 22
    UNION         shift, and go to state 23
    ENUM          shift, and go to state 24

    $default  reduce using rule 18 (declaration_specifiers)

    declaration_specifiers     go to state 61
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    actual_type_specifier      go to state 35
    type_adjective             go to state 36
    type_qualifier             go to state 37
    struct_or_union_specifier  go to state 38
    struct_or_union            go to state 39
    enum_specifier             go to state 42


State 34

   20 declaration_specifiers: type_specifier .
   21                       | type_specifier . declaration_specifiers

    TYPEDEF_NAME  shift, and go to state 3
    TYPEDEF       shift, and go to state 6
    EXTERN        shift, and go to state 7
    STATIC        shift, and go to state 8
    AUTO          shift, and go to state 9
    REGISTER      shift, and go to state 10
    CHAR          shift, and go to state 11
    SHORT         shift, and go to state 12
    INT           shift, and go to state 13
    LONG          shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    FLOAT         shift, and go to state 17
    DOUBLE        shift, and go to state 18
    CONST         shift, and go to state 19
    VOLATILE      shift, and go to state 20
    VOID          shift, and go to state 21
    STRUCT        shift, and go to state 22
    UNION         shift, and go to state 23
    ENUM          shift, and go to state 24

    $default  reduce using rule 20 (declaration_specifiers)

    declaration_specifiers     go to state 62
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    actual_type_specifier      go to state 35
    type_adjective             go to state 36
    type_qualifier             go to state 37
    struct_or_union_specifier  go to state 38
    struct_or_union            go to state 39
    enum_specifier             go to state 42


State 35

   29 type_specifier: actual_type_specifier .

    $default  reduce using rule 29 (type_specifier)


State 36

   30 type_specifier: type_adjective .

    $default  reduce using rule 30 (type_specifier)


State 37

   22 declaration_specifiers: type_qualifier .
   23                       | type_qualifier . declaration_specifiers

    TYPEDEF_NAME  shift, and go to state 3
    TYPEDEF       shift, and go to state 6
    EXTERN        shift, and go to state 7
    STATIC        shift, and go to state 8
    AUTO          shift, and go to state 9
    REGISTER      shift, and go to state 10
    CHAR          shift, and go to state 11
    SHORT         shift, and go to state 12
    INT           shift, and go to state 13
    LONG          shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    FLOAT         shift, and go to state 17
    DOUBLE        shift, and go to state 18
    CONST         shift, and go to state 19
    VOLATILE      shift, and go to state 20
    VOID          shift, and go to state 21
    STRUCT        shift, and go to state 22
    UNION         shift, and go to state 23
    ENUM          shift, and go to state 24

    $default  reduce using rule 22 (declaration_specifiers)

    declaration_specifiers     go to state 63
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    actual_type_specifier      go to state 35
    type_adjective             go to state 36
    type_qualifier             go to state 37
    struct_or_union_specifier  go to state 38
    struct_or_union            go to state 39
    enum_specifier             go to state 42


State 38

   37 actual_type_specifier: struct_or_union_specifier .

    $default  reduce using rule 37 (actual_type_specifier)


State 39

   45 struct_or_union_specifier: struct_or_union . LC struct_declaration_list RC
   46                          | struct_or_union . identifier LC struct_declaration_list RC
   47                          | struct_or_union . identifier

    ENUMERATION_CONSTANT  shift, and go to state 1
    IDENTIFIER            shift, and go to state 2
    LC                    shift, and go to state 64

    identifier  go to state 65


State 40

   15 untyped_declaration: init_declarator_list . SM
   53 init_declarator_list: init_declarator_list . CM init_declarator

    CM  shift, and go to state 66
    SM  shift, and go to state 67


State 41

   52 init_declarator_list: init_declarator .

    $default  reduce using rule 52 (init_declarator_list)


State 42

   38 actual_type_specifier: enum_specifier .

    $default  reduce using rule 38 (actual_type_specifier)


State 43

   54 init_declarator: declarator .
   55                | declarator . ASN initializer

    ASN  shift, and go to state 68

    $default  reduce using rule 54 (init_declarator)


State 44

   74 declarator: direct_declarator .
   78 direct_declarator: direct_declarator . LB RB
   79                  | direct_declarator . LB constant_expression RB
   80                  | direct_declarator . LP parameter_type_list RP
   81                  | direct_declarator . LP RP
   82                  | direct_declarator . LP identifier_list RP
   85 direct_function_declarator: direct_declarator . LP parameter_type_list RP
   86                           | direct_declarator . LP RP
   87                           | direct_declarator . LP identifier_list RP

    LP  shift, and go to state 69
    LB  shift, and go to state 70

    $default  reduce using rule 74 (declarator)


State 45

    9 function_definition: function_declarator . compound_statement
   10                    | function_declarator . declaration_list compound_statement
